sorted/tests/08-underscore-failed.stderr
error: RustFest should sort before _
  --> tests/08-underscore-failed.rs:38:13
   |
38 |             RustFest => "Europe",
   |             ^^^^^^^^
